--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "css-loader": "^3.6.0",
     "drei": "0.0.60",
     "glsl-grid": "^1.0.2",
     "glsl-noise": "0.0.0",
